2008-03-14  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Add CUPS_PRINTER_DISCOVERED constant.

2008-03-12  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_authenticateJob): New method.

2008-03-10  Tim Waugh  <twaugh@redhat.com>

	* Makefile (PYTHONVERS): Removed.

2008-03-05  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* cupsppd.c (getline): emulate getline() for systems without it.
	  (PPD_writeFd): replace strndup with calloc/strncpy for portability.
	* cupsconnection.c (Connection_getDocument): generate tempfile template
	with snprintf instead of alloc, copy, copy.
	(Connection_addPrinter): generate tempfile template with snprintf
	instead of strpcpy, strcpy.
	(PyObject_to_String): avoid using alloca() by declaring a buffer at
	the top of the function.
	(Connection_getServerPPD): test for CUPS version using cups.h supplied
	values.
	(Connection_getDocument): test for CUPS version using cups.h supplied
	values.
	* cupsmodule.c: test for CUPS version using cups.h supplied values.

2008-03-05  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.36.

2008-03-01  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_renewSubscription): New optional
	parameter lease_duration.

2008-02-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getNotifications): State reasons
	are always a list.
	(Connection_getJobAttributes): Likewise.

2008-02-19  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.35.

2008-02-19  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobAttributes): New method.

2008-02-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelAllJobs): New method.
	(Connection_getPrinterAttributes): Don't free name string before
	use.
	(Connection_getPrinterAttributes): Construct the URI in the
	correct buffer.
	(Connection_printTestPage): Avoid compiler warning.

2008-02-06  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): The